// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DeathEventPanel Taunt Status Tests Edge Cases should handle empty events arrays: empty-events-arrays 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
    >
      💀 Death Events
    </h6>
    <div
      class="MuiBox-root css-1skl6dm"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-ztyu2v-MuiTypography-root"
      >
        🎉 Flawless Victory!
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-4leci6-MuiTypography-root"
      >
        No deaths detected in this fight.
      </p>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Edge Cases should handle loading states correctly: loading-state 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 120px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 100px; height: 24px;"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 80px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 90px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 100px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 110px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 120px; height: 24px;"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 90px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 105px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 120px; height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-4bkd8f-MuiSkeleton-root"
          style="width: 135px; height: 24px;"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-15jfyzb-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-kacebu-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1epbneo-MuiSkeleton-root"
              style="width: 40px; height: 40px;"
            />
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
                style="width: 70%; height: 20px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 50%; height: 16px;"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 80%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 50%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 70%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 90%; height: 48px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 35%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-15jfyzb-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-kacebu-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1epbneo-MuiSkeleton-root"
              style="width: 40px; height: 40px;"
            />
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
                style="width: 70%; height: 20px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 50%; height: 16px;"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 80%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 50%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 70%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 90%; height: 48px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 35%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-15jfyzb-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-kacebu-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1epbneo-MuiSkeleton-root"
              style="width: 40px; height: 40px;"
            />
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
                style="width: 70%; height: 20px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 50%; height: 16px;"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 80%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 50%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 70%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 90%; height: 48px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 35%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-15jfyzb-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-kacebu-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1epbneo-MuiSkeleton-root"
              style="width: 40px; height: 40px;"
            />
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
                style="width: 70%; height: 20px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 50%; height: 16px;"
              />
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 80%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 50%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-f1lge5-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 70%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 40%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 90%; height: 48px;"
            />
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 35%; height: 16px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-19qijlq-MuiSkeleton-root"
              style="width: 60%; height: 32px;"
            />
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-19g8xyv-MuiSkeleton-root"
              style="width: 45%; height: 16px;"
            />
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
            <div
              class="MuiBox-root css-wax5jp"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 70%; height: 14px;"
              />
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kkcbhd-MuiSkeleton-root"
                style="width: 20%; height: 14px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Edge Cases should handle missing debuff lookup data gracefully: missing-debuff-lookup-data 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Hurricane: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Hurricane
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Enemy Boss
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-10s9a47-MuiTypography-root"
            >
              No recent attacks recorded
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Edge Cases should handle null/undefined sourceID values: null-undefined-source-ids 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Hurricane: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ❤️ Health Before Fatal Attack
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
              >
                25,000
                /
                30,000
                 (
                <span
                  style="font-weight: 800; color: rgb(56, 142, 60);"
                >
                  83
                  %
                </span>
                )
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Hurricane
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 600; color: rgb(191, 26, 118);"
                >
                  Unknown
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <div
              class="MuiBox-root css-1kkt86i"
            >
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-1vchezl-MuiTypography-root"
                >
                  Exploiter
                   by
                   
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Unknown
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    2,000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Edge Cases should handle taunt status for blocked attacks: blocked-attack-with-taunt 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Hurricane: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ❤️ Health Before Fatal Attack
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
              >
                25,000
                /
                30,000
                 (
                <span
                  style="font-weight: 800; color: rgb(56, 142, 60);"
                >
                  83
                  %
                </span>
                )
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Hurricane
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Enemy Boss
                </span>
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-8fmmw9-MuiTypography-root"
              >
                🎯 Killer was taunted
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <div
              class="MuiBox-root css-1kkt86i"
            >
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-uo0dka-MuiTypography-root"
                >
                  Exploiter
                   by
                   
                  <span
                    style="margin-right: 4px; font-size: 0.6rem; opacity: 0.9;"
                    title="Attacker was taunted"
                  >
                    🎯
                  </span>
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Enemy Boss
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    1,000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Taunt Status Snapshots should handle simultaneous killing blow attacks with mixed taunt status: simultaneous-attacks-mixed-taunt-status 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Multiple attacks (2): 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ❤️ Health Before Fatal Attack
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
              >
                25,000
                /
                30,000
                 (
                <span
                  style="font-weight: 800; color: rgb(56, 142, 60);"
                >
                  83
                  %
                </span>
                )
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  class=""
                  data-mui-internal-clone-element="true"
                  style="font-weight: 300; color: rgb(191, 26, 118); cursor: help; text-decoration: underline dotted;"
                >
                  Multiple attacks (2)
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Add Enemy
                </span>
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1x28p5b-MuiTypography-root"
              >
                🔴 Killer was NOT taunted
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              💥 Fatal Damage
            </p>
            <div
              class="MuiBox-root css-v3kbp6"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-mmn5d2-MuiTypography-root"
              >
                5,000
                <span
                  style="font-size: 0.75rem; font-weight: 400; opacity: 0.8; margin-left: 4px;"
                >
                  damage
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <div
              class="MuiBox-root css-1kkt86i"
            >
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-1vchezl-MuiTypography-root"
                >
                  Exploiter
                   by
                   
                  <span
                    style="margin-right: 4px; font-size: 0.6rem; opacity: 0.9;"
                    title="Attacker was taunted"
                  >
                    🎯
                  </span>
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Enemy Boss
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    3,000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Taunt Status Snapshots should render attacks with mixed taunt status preceding death: attacks-with-mixed-taunt-status 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Juggernaut: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ❤️ Health Before Fatal Attack
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
              >
                25,000
                /
                30,000
                 (
                <span
                  style="font-weight: 800; color: rgb(56, 142, 60);"
                >
                  83
                  %
                </span>
                )
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Juggernaut
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Enemy Boss
                </span>
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-8fmmw9-MuiTypography-root"
              >
                🎯 Killer was taunted
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              💥 Fatal Damage
            </p>
            <div
              class="MuiBox-root css-v3kbp6"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-mmn5d2-MuiTypography-root"
              >
                2,500
                <span
                  style="font-size: 0.75rem; font-weight: 400; opacity: 0.8; margin-left: 4px;"
                >
                  damage
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <div
              class="MuiBox-root css-1kkt86i"
            >
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-1vchezl-MuiTypography-root"
                >
                  Exploiter
                   by
                   
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Enemy Boss
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    2,000
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-1vchezl-MuiTypography-root"
                >
                  Reaving Blows
                   by
                   
                  <span
                    style="margin-right: 4px; font-size: 0.6rem; opacity: 0.9;"
                    title="Attacker was taunted"
                  >
                    🎯
                  </span>
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Enemy Boss
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    3,000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Taunt Status Snapshots should render death with non-taunted killer in killing blow: death-with-non-taunted-killer 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Hurricane: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Hurricane
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Enemy Boss
                </span>
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1x28p5b-MuiTypography-root"
              >
                🔴 Killer was NOT taunted
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-10s9a47-MuiTypography-root"
            >
              No recent attacks recorded
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Taunt Status Snapshots should render death with taunted killer in killing blow: death-with-taunted-killer 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Hurricane: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Hurricane
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Enemy Boss
                </span>
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-8fmmw9-MuiTypography-root"
              >
                🎯 Killer was taunted
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-10s9a47-MuiTypography-root"
            >
              No recent attacks recorded
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeathEventPanel Taunt Status Tests Taunt Status Snapshots should render multiple attackers with different taunt statuses: multiple-attackers-different-taunt-status 1`] = `
<div>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <div
      class="MuiBox-root css-rvh7fc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
      >
        💀 Death Events
      </h6>
      <div
        class="MuiBox-root css-1i27l4i"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1i9xyed-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Total Deaths
          </span>
        </div>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-sedkx8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            1 Players
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        Death Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <a
          href="https://www.esologs.com/reports/test-report?fight=1&source=456&type=deaths"
          rel="noopener noreferrer"
          style="text-decoration: none;"
          target="_blank"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1vbnbk-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              DPS Player: 1
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiBox-root css-i3pbo"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-12ro8jl-MuiTypography-root"
      >
        ⚔️ Deadly Skills Summary
      </h6>
      <div
        class="MuiBox-root css-zefc5s"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-9sgq2i-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            Juggernaut: 1
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-p6sxho"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1hyrswd-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-93f6w9-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-1amc7ct"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-11xl7vz-MuiAvatar-root"
            >
              #
              1
            </div>
            <div
              class="MuiBox-root css-1xhmi63"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1rzh0y3-MuiTypography-root"
              >
                DPS Player
              </h6>
              <a
                class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineAlways css-ec8d3o-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/report/test-report/fight/1/replay?time=5000&actorId=456"
                title="View in replay at this time"
              >
                0:05.0
                 ▶
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
              >
                ⚡ Stamina at Death
              </p>
              <div
                class="MuiBox-root css-154j2ue"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
                >
                  12000
                  /
                  12000
                   (
                  <span
                    style="font-weight: 800;"
                  >
                    100
                    %
                  </span>
                  )
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ❤️ Health Before Fatal Attack
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-16gfzde-MuiTypography-root"
              >
                25,000
                /
                30,000
                 (
                <span
                  style="font-weight: 800; color: rgb(56, 142, 60);"
                >
                  83
                  %
                </span>
                )
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              ⚔️ Killing Blow
            </p>
            <div
              class="MuiBox-root css-12x3ecj"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-uxjokf-MuiTypography-root"
              >
                <span
                  style="font-weight: 500;"
                >
                  Killed
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 300; color: rgb(191, 26, 118);"
                >
                  Juggernaut
                </span>
                 
                <span
                  style="font-weight: 400;"
                >
                  by
                </span>
                 
                <span
                  style="font-weight: 900; color: rgb(191, 26, 118);"
                >
                  Enemy Boss
                </span>
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-8fmmw9-MuiTypography-root"
              >
                🎯 Killer was taunted
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              💥 Fatal Damage
            </p>
            <div
              class="MuiBox-root css-v3kbp6"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-mmn5d2-MuiTypography-root"
              >
                2,500
                <span
                  style="font-size: 0.75rem; font-weight: 400; opacity: 0.8; margin-left: 4px;"
                >
                  damage
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-i83aoc-MuiTypography-root"
            >
              🕒 Recent Attacks
            </p>
            <div
              class="MuiBox-root css-1kkt86i"
            >
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-1vchezl-MuiTypography-root"
                >
                  Exploiter
                   by
                   
                  <span
                    style="margin-right: 4px; font-size: 0.6rem; opacity: 0.9;"
                    title="Attacker was taunted"
                  >
                    🎯
                  </span>
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Enemy Boss
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    2,000
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root css-6nhbos"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-1vchezl-MuiTypography-root"
                >
                  Reaving Blows
                   by
                   
                  <span
                    style="color: rgb(255, 107, 107);"
                  >
                    Add Enemy
                  </span>
                </span>
                <div
                  class="MuiBox-root css-ts5sa3"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-14b1bc5-MuiTypography-root"
                  >
                    3,000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
